# aiohttp_app_test

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  settings.json  setup-desktop-shortcut.sh  start-aiohttp-app.desktop  start.bat  start.ps1  start.py  start.sh  tasks.md  test_aiohttp_app.code-workspace
static/: app.js  index.html  styles.css
