[tool.poetry]
name = "aiohttp-app-test"
version = "0.1.0"
description = "Simple aiohttp web application that works on both Windows and Ubuntu"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"